Update settings and home page

--- a/cms/templates/cms/home.html
+++ b/cms/templates/cms/home.html
@@ -73,7 +73,7 @@
 			<div class="list-group list-group-flush">
 			  <a href="#" class="list-group-item">ODK Documentation</a>
 			  <a href="#" class="list-group-item">Data Export</a>
-			  <a href="{% url contact_listboard_url %}" class="list-group-item">EDC SMS</a>
+			  <a href="{% url contract_listboard_url %}" class="list-group-item">EDC SMS</a>
 			  <a href="#" class="list-group-item">Verify consent</a>
 			</div>  <!-- list-group .// -->
 		</div>
