--- a/cms/templates/cms/home.html
+++ b/cms/templates/cms/home.html
@@ -71,7 +71,7 @@
 		<header class="card-header"><h6 class="title">Pi contracts </h6></header>
 		<div class="filter-content">
 			<div class="list-group list-group-flush">
-			  <a href="#" class="list-group-item">PI contracts <span class="float-right badge badge-light round">{{pi_contracts}}</span></a>
+			  <a href="{% url pi_contract_listboard_url %}" class="list-group-item">PI contracts <span class="float-right badge badge-light round">{{pi_contracts}}</span></a>
 			  <a href="#" class="list-group-item">PI active contracts <span class="float-right badge badge-light round">{{active_pis}}</span></a>
 			  <a href="#" class="list-group-item">PI completed contracts <span class="float-right badge badge-light round">{{pi_completed}}</span></a>
 			</div>  <!-- list-group .// -->
@@ -86,7 +86,7 @@
 		<header class="card-header"><h6 class="title">Employee contracts</h6></header>
 		<div class="filter-content">
 			<div class="list-group list-group-flush">
-			  <a href="#" class="list-group-item">Employee contracts <span class="float-right badge badge-light round">{{employee_contracts}}</span> </a>
+			  <a href="{% url emp_contract_listboard_url %}" class="list-group-item">Employee contracts <span class="float-right badge badge-light round">{{employee_contracts}}</span> </a>
 			  <a href="#" class="list-group-item">Employee active contracts  <span class="float-right badge badge-light round">{{active_employees}}</span></a>
 			  <a href="#" class="list-group-item">Employee completed contracts <span class="float-right badge badge-light round">{{employee_completed}}</span></a>
 			</div>  <!-- list-group .// -->
@@ -101,7 +101,7 @@
 		<header class="card-header"><h6 class="title">Consultant contracts</h6></header>
 		<div class="filter-content">
 			<div class="list-group list-group-flush">
-			  <a href="#" class="list-group-item">Consultant contracts <span class="float-right badge badge-light round">{{consultant_contracts}}</span> </a>
+			  <a href="{% url consultant_contract_listboard_url %}" class="list-group-item">Consultant contracts <span class="float-right badge badge-light round">{{consultant_contracts}}</span> </a>
 			  <a href="#" class="list-group-item">Consultant active contracts  <span class="float-right badge badge-light round">{{active_consultants}}</span></a>
 			  <a href="#" class="list-group-item">Consultant completed contracts <span class="float-right badge badge-light round">{{consultant_completed}}</span></a>
 			</div>  <!-- list-group .// -->
