--- a/cms/templates/cms/home.html
+++ b/cms/templates/cms/home.html
@@ -35,14 +35,14 @@
             <div class="card border-danger mx-sm-1 p-3">
                 <div class="card border-danger shadow text-danger p-3 my-card" ><span aria-hidden="true"></span></div>
                 <div class="text-danger text-center mt-3"><h4>Total PIs</h4></div>
-                <div class="text-danger text-center mt-2"><h1>{{consultant_total}}</h1></div>
+                <div class="text-danger text-center mt-2"><h1>{{pi_total}}</h1></div>
             </div>
         </div>
         <div class="col-md-3">
             <div class="card border-warning mx-sm-1 p-3">
                 <div class="card border-warning shadow text-warning p-3 my-card" ><span  aria-hidden="true"></span></div>
                 <div class="text-warning text-center mt-3"><h4>Total Consultants</h4></div>
-                <div class="text-warning text-center mt-2"><h1>{{pi_total}}</h1></div>
+                <div class="text-warning text-center mt-2"><h1>{{consultant_total}}</h1></div>
             </div>
         </div>
      </div>
