Update requirements & home view

--- a/cms/templates/cms/home.html
+++ b/cms/templates/cms/home.html
@@ -72,8 +72,8 @@
 		<div class="filter-content">
 			<div class="list-group list-group-flush">
 			  <a href="{% url pi_contract_listboard_url %}" class="list-group-item">PI contracts <span class="float-right badge badge-light round">{{pi_contracts}}</span></a>
-			  <a href="#" class="list-group-item">PI active contracts <span class="float-right badge badge-light round">{{active_pis}}</span></a>
-			  <a href="#" class="list-group-item">PI completed contracts <span class="float-right badge badge-light round">{{pi_completed}}</span></a>
+			  <a href="{% url pi_contract_listboard_url %}" class="list-group-item">PI active contracts <span class="float-right badge badge-light round">{{active_pis}}</span></a>
+			  <a href="{% url pi_contract_listboard_url %}" class="list-group-item">PI completed contracts <span class="float-right badge badge-light round">{{pi_completed}}</span></a>
 			</div>  <!-- list-group .// -->
 		</div>
 	</article> <!-- card-group-item.// -->
@@ -87,8 +87,8 @@
 		<div class="filter-content">
 			<div class="list-group list-group-flush">
 			  <a href="{% url emp_contract_listboard_url %}" class="list-group-item">Employee contracts <span class="float-right badge badge-light round">{{employee_contracts}}</span> </a>
-			  <a href="#" class="list-group-item">Employee active contracts  <span class="float-right badge badge-light round">{{active_employees}}</span></a>
-			  <a href="#" class="list-group-item">Employee completed contracts <span class="float-right badge badge-light round">{{employee_completed}}</span></a>
+			  <a href="{% url emp_contract_listboard_url %}" class="list-group-item">Employee active contracts  <span class="float-right badge badge-light round">{{active_employees}}</span></a>
+			  <a href="{% url emp_contract_listboard_url %}" class="list-group-item">Employee completed contracts <span class="float-right badge badge-light round">{{employee_completed}}</span></a>
 			</div>  <!-- list-group .// -->
 		</div>
 	</article> <!-- card-group-item.// -->
@@ -102,8 +102,8 @@
 		<div class="filter-content">
 			<div class="list-group list-group-flush">
 			  <a href="{% url consultant_contract_listboard_url %}" class="list-group-item">Consultant contracts <span class="float-right badge badge-light round">{{consultant_contracts}}</span> </a>
-			  <a href="#" class="list-group-item">Consultant active contracts  <span class="float-right badge badge-light round">{{active_consultants}}</span></a>
-			  <a href="#" class="list-group-item">Consultant completed contracts <span class="float-right badge badge-light round">{{consultant_completed}}</span></a>
+			  <a href="{% url consultant_contract_listboard_url %}" class="list-group-item">Consultant active contracts  <span class="float-right badge badge-light round">{{active_consultants}}</span></a>
+			  <a href="{% url consultant_contract_listboard_url %}" class="list-group-item">Consultant completed contracts <span class="float-right badge badge-light round">{{consultant_completed}}</span></a>
 			</div>  <!-- list-group .// -->
 		</div>
 	</article> <!-- card-group-item.// -->
